force-app/main/default/objects/Booking_Onilne__c/Booking_Onilne__c.object-meta.xml
<CustomObject>
    <label>Booking Online</label>
    <nameField>
        <label>Booking Onilne Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Online</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>