force-app/main/default/objects/Booking_Onilne__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Họ tên KH</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>