force-app/main/default/objects/Booking_Onilne__c/fields/Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Address_Full__c</fullName>
    <formula>Address_No__c &amp;&quot;, &quot;&amp; Ward__c &amp;&quot;, &quot;&amp; District__c &amp;&quot;, &quot;&amp; Province__c</formula>
    <label>Address Full</label>
    <type>Text</type>
</CustomField>