force-app/main/default/objects/Booking_Onilne__c/fields/Address_No__c.field-meta.xml
<CustomField>
    <fullName>Address_No__c</fullName>
    <description>Số nhà, đường</description>
    <label>Address No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>