force-app/main/default/objects/Booking_Onilne__c/fields/Booking_Online_Number__c.field-meta.xml
<CustomField>
    <fullName>Booking_Online_Number__c</fullName>
    <description>Mã Booking Online</description>
    <displayFormat>BO-{000000}</displayFormat>
    <label>Booking Online Number</label>
    <type>AutoNumber</type>
</CustomField>