force-app/main/default/objects/Booking_Onilne__c/fields/Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Color_Code__c</fullName>
    <description>Mã màu</description>
    <label>Color Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>