force-app/main/default/objects/Booking_Onilne__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email KH</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>