force-app/main/default/objects/Booking_Onilne__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>SDT KH</description>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>