force-app/main/default/objects/Booking_Onilne__c/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <description>Mã mẫu xe</description>
    <label>Model Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>