force-app/main/default/objects/Booking_Onilne__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Tỉnh/Thành</description>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>