force-app/main/default/objects/Booking_Onilne__c/recordTypes/Bike.recordType-meta.xml
<RecordType>
    <fullName>Bike</fullName>
    <active>true</active>
    <label>Bike</label>
</RecordType>