force-app/main/default/objects/Booking_Onilne__c/recordTypes/PCA.recordType-meta.xml
<RecordType>
    <fullName>PCA</fullName>
    <active>true</active>
    <label>PCA</label>
</RecordType>