force-app/main/default/objects/Booking_Onilne__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Address_Full__c</columns>
    <columns>Mobile__c</columns>
    <columns>Email__c</columns>
    <columns>Color_Code__c</columns>
    <columns>Model_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>